--- a/src/index.css
+++ b/src/index.css
@@ -58,12 +58,13 @@ button {
 .items {
   display: flex;
   gap: 5px;
-  background-color: #fff;
-  margin: 20px 0;
+  margin: 30px 0;
 }
 
 .item {
+  position: relative;
   flex: 1;
+  background-color: #fff;
   border: 1px solid var(--dark);
   border-radius: 10px;
 }
@@ -71,4 +72,12 @@ button {
 .item > h2 {
   font-size: 3em;
   margin: 10px;
+}
+
+.low-price {
+  color: red;
+  font-size: 0.8em;
+  bottom: -20%;
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
